# Hack-Western

./: .gitignore  CMakeLists.txt  main.cpp  tasks.json  vcpkg.json
app/: main.cpp
data/: convert_log_to_json.py  data.txt  sample_frames.json  sample_frames_old.json
include/: GyroRepCounter.hpp  IDataSource.hpp  JsonDataSource.hpp  RepCounter.hpp  SensorFrame.hpp
server/: db.js  index.html  package-lock.json  package.json  server.js  test_server.js
src/: GyroRepCounter.cpp  JsonDataSource.cpp  RepCounter.cpp
